# sarashina2.2-tts

./: .gitignore  README.md  README_ja.md  pyproject.toml
scripts/: train_llm.py
